# Ponderada-Teleoperado

./: README.md
Ponderada-Teleoperado/src/Bash/Ponderada_Teleoperado/: setup.cfg
Ponderada-Teleoperado/src/Ponderada_Teleoperado/: setup.py
Ponderada-Teleoperado/src/Teleop/roboTeleop/: teleop_node.py
Ponderada-Teleoperado/src/roboTeleop/: setup.py
colcon/install/: local_setup.sh  setup.bash  setup.sh
src/: package.xml
src/Ponderada_Teleoperado/: package.xml  setup.py
src/Ponderada_Teleoperado/roboTeleop/: __init__.py  user_interface.py
src/install/: setup.ps1  setup.zsh
src/log/: latest_build
src/roboTeleop/: package.xml  setup.cfg
