<package format="2">
  <name>Ponderada_Teleoperado</name>
  <version>0.0.0</version>
  <description>Projeto de interação com Turtlebot usando ROS 2</description>
  <maintainer email="lucas.luccas@sou.inteli.edu.br">Lucas de Luccas</maintainer>
  <license>Apache License 2.0</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rclpy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
</package>

